# RTRP

./: .gitignore  CMakeLists.txt  README.md
cmake/: git.cmake  ltresult.cmake  result.cmake
include/: RtResponseParser.hpp  fwddec.hpp  rtrp_result.hpp
include/objects/: CreatorObject.hpp  LevelObject.hpp  ListObject.hpp  SongObject.hpp
include/rtrp/: fwddec.hpp  rtrp.hpp  rtrp_utils.hpp
include/rtrp/impl/: result.hpp
include/rtrp/objects/: CreatorObject.hpp  LevelObject.hpp  ListObject.hpp  PageObject.hpp  SongObject.hpp  UserObject.hpp
include/rtrp/responses/: LevelResponse.hpp  ListResponse.hpp  UserResponse.hpp
src/: RtResponseParser.cpp  macros.hpp  rtrp.cpp  rtrp_utils.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  equality.hpp  test.cpp
tests/manual/: CMakeLists.txt  manual.cpp
